--- a/client/src/assets/custom.scss
+++ b/client/src/assets/custom.scss
@@ -2,7 +2,7 @@ $badger-blue-100: hsl(221, 20%, 97%);  /* #F6F7F9 */
 $badger-blue-200: hsl(221, 25%, 90%);  /* #DFE3EC */
 $badger-blue-300: hsl(221, 35%, 75%);  /* #A9B7D6 */
 $badger-blue-400: hsl(221, 45%, 60%);  /* #6B88C7 */
-$badger-blue:       hsl(221, 57%, 27%); /* #1E376C */
+$badger-blue:       #3795BD; /* #1E376C */
 $badger-blue-600:   hsl(221, 60%, 22%); /* #162C5A */
 $badger-blue-700:   hsl(221, 65%, 16%); /* #0E1F43 */
 $badger-blue-800:   hsl(221, 70%, 10%); /* #081329 */
