--- a/client/src/assets/custom.scss
+++ b/client/src/assets/custom.scss
@@ -1,4 +1,4 @@
-$conecta-blue-100: hsl(198, 20%, 97%);  /* #F6F7F9 */
+$conecta-blue-100: hsl(200, 20%, 97%);  /* #f6f8f9 */
 $conecta-blue-200: hsl(198, 25%, 90%);  /* #DFE3EC */
 $conecta-blue-300: hsl(198, 35%, 75%);  /* #A9B7D6 */
 $conecta-blue-400: hsl(198, 45%, 60%);  /* #6B88C7 */
